--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>JavaScript</title>		
 	<script src="ResultTable.js"></script>
-	<script src="Team_Australia.js"></script>
+	<script src="Teams.js"></script>
 	<script src="Game.js"></script>
 </head>
 <body>
